--- a/fonts/family_name/monospace/size1/design_2/ttf/hinting/xgridfit/hinting.template
+++ b/fonts/family_name/monospace/size1/design_2/ttf/hinting/xgridfit/hinting.template
@@ -1,26 +1,26 @@
+{% import 'hint_corner.xml' as hint_corner %}
+{% import 'hint_half_corner.xml' as hint_half_corner %}
+{% import 'hint_indent.xml' as hint_indent %}
+{% import 'exclam.xml' as exclam %}
+{% import 'quotedbl.xml' as quotedbl %}
+{% import 'semicolon.xml' as semicolon %}
+{% import 'capital_a.xml' as capital_a %}
+{% import 'capital_b.xml' as capital_b %}
+{% import 'capital_c.xml' as capital_c %}
+{% import 'capital_d.xml' as capital_d %}
+{% import 'capital_p.xml' as capital_p %}
 <?xml version="1.0" encoding="UTF-8"?>
-<xgridfit xmlns="http://xgridfit.sourceforge.net/Xgridfit2"
-          xmlns:xi="http://www.w3.org/2001/XInclude">
+<xgridfit xmlns="http://xgridfit.sourceforge.net/Xgridfit2">
 
+{{hint_corner}}
 
-  <xi:include href="hint_corner.xgf"
-              xpointer="xmlns(x=http://xgridfit.sourceforge.net/Xgridfit2)
-              xpointer(/x:xgridfit/x:macro)"/>
+{{hint_half_corner}}
 
-<!--
-  <xi:include href="hint_half_corner.xgf"
-              xpointer="xmlns(x=http://xgridfit.sourceforge.net/Xgridfit2)
-              xpointer(/x:xgridfit/x:macro)"/>
-
-  <xi:include href="hint_indent.xgf"
-              xpointer="xmlns(x=http://xgridfit.sourceforge.net/Xgridfit2)
-              xpointer(/x:xgridfit/x:macro)"/>
--->
+{{hint_indent}}
 
   <control-value name="stem-width" value="128"/>
   <control-value name="diagonal-stem-width" value="128"/>
   <control-value name="diagonal-stem-width-corner" value="128"/>
-
 
   <pre-program>
     <!-- Turns off drop-out-control -->
@@ -48,9 +48,20 @@
     <set-control-value name="diagonal-stem-width-corner" unit="pixel" value="round(control-value(stem-width))"/>
   </pre-program>
 
+{{exclam}}
 
-  <xi:include href="capital_a.xgf"
-              xpointer="xmlns(x=http://xgridfit.sourceforge.net/Xgridfit2)
-              xpointer(/x:xgridfit/x:glyph)"/>
+{{quotedbl}}
+
+{{semicolon}}
+
+{{capital_a}}
+
+{{capital_b}}
+
+{{capital_c}}
+
+{{capital_d}}
+
+{{capital_p}}
 
 </xgridfit>
