--- a/sandbox/gridfitting/debug/Untitled.ufo/glyphs/contents.plist
+++ b/sandbox/gridfitting/debug/Untitled.ufo/glyphs/contents.plist
@@ -4,5 +4,7 @@
   <dict>
     <key>exclam</key>
     <string>exclam.glif</string>
+    <key>quotedbl</key>
+    <string>quotedbl.glif</string>
   </dict>
 </plist>
