Removed overlap. Simplified.

--- a/fonts/family_name/monospace/size2/design_2/squares/ufo/Untitled.ufo/glyphs/contents.plist
+++ b/fonts/family_name/monospace/size2/design_2/squares/ufo/Untitled.ufo/glyphs/contents.plist
@@ -1,1 +1,196 @@
-<plist version="1.0"><dict><key>char32</key><string>char32.glif</string><key>char33</key><string>char33.glif</string><key>char34</key><string>char34.glif</string><key>char35</key><string>char35.glif</string><key>char36</key><string>char36.glif</string><key>char37</key><string>char37.glif</string><key>char38</key><string>char38.glif</string><key>char39</key><string>char39.glif</string><key>char40</key><string>char40.glif</string><key>char41</key><string>char41.glif</string><key>char42</key><string>char42.glif</string><key>char43</key><string>char43.glif</string><key>char44</key><string>char44.glif</string><key>char45</key><string>char45.glif</string><key>char46</key><string>char46.glif</string><key>char47</key><string>char47.glif</string><key>char48</key><string>char48.glif</string><key>char49</key><string>char49.glif</string><key>char50</key><string>char50.glif</string><key>char51</key><string>char51.glif</string><key>char52</key><string>char52.glif</string><key>char53</key><string>char53.glif</string><key>char54</key><string>char54.glif</string><key>char55</key><string>char55.glif</string><key>char56</key><string>char56.glif</string><key>char57</key><string>char57.glif</string><key>char58</key><string>char58.glif</string><key>char59</key><string>char59.glif</string><key>char60</key><string>char60.glif</string><key>char61</key><string>char61.glif</string><key>char62</key><string>char62.glif</string><key>char63</key><string>char63.glif</string><key>char64</key><string>char64.glif</string><key>char65</key><string>char65.glif</string><key>char66</key><string>char66.glif</string><key>char67</key><string>char67.glif</string><key>char68</key><string>char68.glif</string><key>char69</key><string>char69.glif</string><key>char70</key><string>char70.glif</string><key>char71</key><string>char71.glif</string><key>char72</key><string>char72.glif</string><key>char73</key><string>char73.glif</string><key>char74</key><string>char74.glif</string><key>char75</key><string>char75.glif</string><key>char76</key><string>char76.glif</string><key>char77</key><string>char77.glif</string><key>char78</key><string>char78.glif</string><key>char79</key><string>char79.glif</string><key>char80</key><string>char80.glif</string><key>char81</key><string>char81.glif</string><key>char82</key><string>char82.glif</string><key>char83</key><string>char83.glif</string><key>char84</key><string>char84.glif</string><key>char85</key><string>char85.glif</string><key>char86</key><string>char86.glif</string><key>char87</key><string>char87.glif</string><key>char88</key><string>char88.glif</string><key>char89</key><string>char89.glif</string><key>char90</key><string>char90.glif</string><key>char91</key><string>char91.glif</string><key>char92</key><string>char92.glif</string><key>char93</key><string>char93.glif</string><key>char94</key><string>char94.glif</string><key>char95</key><string>char95.glif</string><key>char96</key><string>char96.glif</string><key>char97</key><string>char97.glif</string><key>char98</key><string>char98.glif</string><key>char99</key><string>char99.glif</string><key>char100</key><string>char100.glif</string><key>char101</key><string>char101.glif</string><key>char102</key><string>char102.glif</string><key>char103</key><string>char103.glif</string><key>char104</key><string>char104.glif</string><key>char105</key><string>char105.glif</string><key>char106</key><string>char106.glif</string><key>char107</key><string>char107.glif</string><key>char108</key><string>char108.glif</string><key>char109</key><string>char109.glif</string><key>char110</key><string>char110.glif</string><key>char111</key><string>char111.glif</string><key>char112</key><string>char112.glif</string><key>char113</key><string>char113.glif</string><key>char114</key><string>char114.glif</string><key>char115</key><string>char115.glif</string><key>char116</key><string>char116.glif</string><key>char117</key><string>char117.glif</string><key>char118</key><string>char118.glif</string><key>char119</key><string>char119.glif</string><key>char120</key><string>char120.glif</string><key>char121</key><string>char121.glif</string><key>char122</key><string>char122.glif</string><key>char123</key><string>char123.glif</string><key>char124</key><string>char124.glif</string><key>char125</key><string>char125.glif</string><key>char126</key><string>char126.glif</string></dict></plist>
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+  <dict>
+    <key>char32</key>
+    <string>char32.glif</string>
+    <key>char33</key>
+    <string>char33.glif</string>
+    <key>char34</key>
+    <string>char34.glif</string>
+    <key>char35</key>
+    <string>char35.glif</string>
+    <key>char36</key>
+    <string>char36.glif</string>
+    <key>char37</key>
+    <string>char37.glif</string>
+    <key>char38</key>
+    <string>char38.glif</string>
+    <key>char39</key>
+    <string>char39.glif</string>
+    <key>char40</key>
+    <string>char40.glif</string>
+    <key>char41</key>
+    <string>char41.glif</string>
+    <key>char42</key>
+    <string>char42.glif</string>
+    <key>char43</key>
+    <string>char43.glif</string>
+    <key>char44</key>
+    <string>char44.glif</string>
+    <key>char45</key>
+    <string>char45.glif</string>
+    <key>char46</key>
+    <string>char46.glif</string>
+    <key>char47</key>
+    <string>char47.glif</string>
+    <key>char48</key>
+    <string>char48.glif</string>
+    <key>char49</key>
+    <string>char49.glif</string>
+    <key>char50</key>
+    <string>char50.glif</string>
+    <key>char51</key>
+    <string>char51.glif</string>
+    <key>char52</key>
+    <string>char52.glif</string>
+    <key>char53</key>
+    <string>char53.glif</string>
+    <key>char54</key>
+    <string>char54.glif</string>
+    <key>char55</key>
+    <string>char55.glif</string>
+    <key>char56</key>
+    <string>char56.glif</string>
+    <key>char57</key>
+    <string>char57.glif</string>
+    <key>char58</key>
+    <string>char58.glif</string>
+    <key>char59</key>
+    <string>char59.glif</string>
+    <key>char60</key>
+    <string>char60.glif</string>
+    <key>char61</key>
+    <string>char61.glif</string>
+    <key>char62</key>
+    <string>char62.glif</string>
+    <key>char63</key>
+    <string>char63.glif</string>
+    <key>char64</key>
+    <string>char64.glif</string>
+    <key>char65</key>
+    <string>char65.glif</string>
+    <key>char66</key>
+    <string>char66.glif</string>
+    <key>char67</key>
+    <string>char67.glif</string>
+    <key>char68</key>
+    <string>char68.glif</string>
+    <key>char69</key>
+    <string>char69.glif</string>
+    <key>char70</key>
+    <string>char70.glif</string>
+    <key>char71</key>
+    <string>char71.glif</string>
+    <key>char72</key>
+    <string>char72.glif</string>
+    <key>char73</key>
+    <string>char73.glif</string>
+    <key>char74</key>
+    <string>char74.glif</string>
+    <key>char75</key>
+    <string>char75.glif</string>
+    <key>char76</key>
+    <string>char76.glif</string>
+    <key>char77</key>
+    <string>char77.glif</string>
+    <key>char78</key>
+    <string>char78.glif</string>
+    <key>char79</key>
+    <string>char79.glif</string>
+    <key>char80</key>
+    <string>char80.glif</string>
+    <key>char81</key>
+    <string>char81.glif</string>
+    <key>char82</key>
+    <string>char82.glif</string>
+    <key>char83</key>
+    <string>char83.glif</string>
+    <key>char84</key>
+    <string>char84.glif</string>
+    <key>char85</key>
+    <string>char85.glif</string>
+    <key>char86</key>
+    <string>char86.glif</string>
+    <key>char87</key>
+    <string>char87.glif</string>
+    <key>char88</key>
+    <string>char88.glif</string>
+    <key>char89</key>
+    <string>char89.glif</string>
+    <key>char90</key>
+    <string>char90.glif</string>
+    <key>char91</key>
+    <string>char91.glif</string>
+    <key>char92</key>
+    <string>char92.glif</string>
+    <key>char93</key>
+    <string>char93.glif</string>
+    <key>char94</key>
+    <string>char94.glif</string>
+    <key>char95</key>
+    <string>char95.glif</string>
+    <key>char96</key>
+    <string>char96.glif</string>
+    <key>char97</key>
+    <string>char97.glif</string>
+    <key>char98</key>
+    <string>char98.glif</string>
+    <key>char99</key>
+    <string>char99.glif</string>
+    <key>char100</key>
+    <string>char100.glif</string>
+    <key>char101</key>
+    <string>char101.glif</string>
+    <key>char102</key>
+    <string>char102.glif</string>
+    <key>char103</key>
+    <string>char103.glif</string>
+    <key>char104</key>
+    <string>char104.glif</string>
+    <key>char105</key>
+    <string>char105.glif</string>
+    <key>char106</key>
+    <string>char106.glif</string>
+    <key>char107</key>
+    <string>char107.glif</string>
+    <key>char108</key>
+    <string>char108.glif</string>
+    <key>char109</key>
+    <string>char109.glif</string>
+    <key>char110</key>
+    <string>char110.glif</string>
+    <key>char111</key>
+    <string>char111.glif</string>
+    <key>char112</key>
+    <string>char112.glif</string>
+    <key>char113</key>
+    <string>char113.glif</string>
+    <key>char114</key>
+    <string>char114.glif</string>
+    <key>char115</key>
+    <string>char115.glif</string>
+    <key>char116</key>
+    <string>char116.glif</string>
+    <key>char117</key>
+    <string>char117.glif</string>
+    <key>char118</key>
+    <string>char118.glif</string>
+    <key>char119</key>
+    <string>char119.glif</string>
+    <key>char120</key>
+    <string>char120.glif</string>
+    <key>char121</key>
+    <string>char121.glif</string>
+    <key>char122</key>
+    <string>char122.glif</string>
+    <key>char123</key>
+    <string>char123.glif</string>
+    <key>char124</key>
+    <string>char124.glif</string>
+    <key>char125</key>
+    <string>char125.glif</string>
+    <key>char126</key>
+    <string>char126.glif</string>
+  </dict>
+</plist>
